crates/katex/tests/snapshots/katex_spec__includegraphics_without_trust.snap
---
source: crates/katex/tests/katex_spec.rs
expression: snapshot
---
[
    DomSpan(
        Span {
            children: [
                Symbol(
                    SymbolNode {
                        is_text_ord: true,
                        text: "\\includegraphics",
                        height: 0.75,
                        depth: 0.25,
                        italic: 0.0,
                        skew: 0.0,
                        width: 0.5,
                        max_font_size: 1.0,
                        classes: Static(
                            "mord",
                        ),
                        style: CssStyle {
                            color: "#cc0000",
                        },
                    },
                ),
            ],
            attributes: {},
            classes: Const(
                [
                    "mord",
                    "text",
                ],
            ),
            height: 0.75,
            depth: 0.25,
            width: None,
            max_font_size: 1.0,
            style: CssStyle {
                color: "#cc0000",
            },
            is_middle: None,
            italic: None,
        },
    ),
]
