crates/katex/tests/snapshots/katex_spec__let_optional_space_parse.snap
---
source: crates/katex/tests/katex_spec.rs
assertion_line: 4517
expression: "format!(\"{:#?}\", parsed)"
---
[
    OrdGroup(
        ParseNodeOrdGroup {
            mode: Math,
            loc: None,
            body: [
                Font(
                    ParseNodeFont {
                        mode: Math,
                        loc: None,
                        font: "mathbf",
                        body: OrdGroup(
                            ParseNodeOrdGroup {
                                mode: Math,
                                loc: None,
                                body: [
                                    MathOrd(
                                        ParseNodeMathOrd {
                                            mode: Math,
                                            loc: None,
                                            text: Owned(
                                                "a",
                                            ),
                                        },
                                    ),
                                ],
                                semisimple: None,
                            },
                        ),
                    },
                ),
            ],
            semisimple: None,
        },
    ),
]
