crates/katex/tests/snapshots/katex_spec__parse_tree_sigma_squared.snap
---
source: crates/katex/tests/katex_spec.rs
assertion_line: 2668
expression: "format!(\"{:#?}\", tree)"
---
[
    SupSub(
        ParseNodeSupSub {
            mode: Math,
            loc: None,
            base: Some(
                MathOrd(
                    ParseNodeMathOrd {
                        mode: Math,
                        loc: None,
                        text: Owned(
                            "\\sigma",
                        ),
                    },
                ),
            ),
            sup: Some(
                TextOrd(
                    ParseNodeTextOrd {
                        mode: Math,
                        loc: None,
                        text: Owned(
                            "2",
                        ),
                    },
                ),
            ),
            sub: None,
        },
    ),
]
