crates/katex/tests/snapshots/katex_spec__sqrt_optional_group_color.snap
---
source: crates/katex/tests/katex_spec.rs
assertion_line: 447
expression: "format!(\"{:#?}\", parsed)"
---
[
    Sqrt(
        ParseNodeSqrt {
            mode: Math,
            loc: None,
            body: OrdGroup(
                ParseNodeOrdGroup {
                    mode: Math,
                    loc: None,
                    body: [
                        MathOrd(
                            ParseNodeMathOrd {
                                mode: Math,
                                loc: None,
                                text: Owned(
                                    "x",
                                ),
                            },
                        ),
                    ],
                    semisimple: None,
                },
            ),
            index: Some(
                OrdGroup(
                    ParseNodeOrdGroup {
                        mode: Math,
                        loc: None,
                        body: [
                            Color(
                                ParseNodeColor {
                                    mode: Math,
                                    loc: None,
                                    color: "red",
                                    body: [
                                        TextOrd(
                                            ParseNodeTextOrd {
                                                mode: Math,
                                                loc: None,
                                                text: Owned(
                                                    "3",
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ],
                        semisimple: None,
                    },
                ),
            ),
        },
    ),
]
