crates/katex/tests/snapshots/katex_spec__sqrt_optional_group_small.snap
---
source: crates/katex/tests/katex_spec.rs
expression: "format!(\"{:#?}\", parsed)"
---
[
    Sqrt(
        ParseNodeSqrt {
            mode: Math,
            loc: None,
            body: OrdGroup(
                ParseNodeOrdGroup {
                    mode: Math,
                    loc: None,
                    body: [
                        MathOrd(
                            ParseNodeMathOrd {
                                mode: Math,
                                loc: None,
                                text: "x",
                            },
                        ),
                    ],
                    semisimple: None,
                },
            ),
            index: Some(
                OrdGroup(
                    ParseNodeOrdGroup {
                        mode: Math,
                        loc: None,
                        body: [
                            Sizing(
                                ParseNodeSizing {
                                    mode: Math,
                                    loc: None,
                                    size: 5,
                                    body: [
                                        TextOrd(
                                            ParseNodeTextOrd {
                                                mode: Math,
                                                loc: None,
                                                text: "3",
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ],
                        semisimple: None,
                    },
                ),
            ),
        },
    ),
]
