crates/katex/tests/snapshots/katex_spec__sqrt_optional_group_textstyle.snap
---
source: crates/katex/tests/katex_spec.rs
expression: "format!(\"{:#?}\", parsed)"
---
[
    Sqrt(
        ParseNodeSqrt {
            mode: Math,
            loc: None,
            body: OrdGroup(
                ParseNodeOrdGroup {
                    mode: Math,
                    loc: None,
                    body: [
                        MathOrd(
                            ParseNodeMathOrd {
                                mode: Math,
                                loc: None,
                                text: Owned(
                                    "x",
                                ),
                            },
                        ),
                    ],
                    semisimple: None,
                },
            ),
            index: Some(
                OrdGroup(
                    ParseNodeOrdGroup {
                        mode: Math,
                        loc: None,
                        body: [
                            Styling(
                                ParseNodeStyling {
                                    reset_font: false,
                                    mode: Math,
                                    loc: None,
                                    style: Style {
                                        id: 2,
                                        size: 1,
                                        cramped: false,
                                    },
                                    body: [
                                        TextOrd(
                                            ParseNodeTextOrd {
                                                mode: Math,
                                                loc: None,
                                                text: Owned(
                                                    "3",
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ],
                        semisimple: None,
                    },
                ),
            ),
        },
    ),
]
